# claw-code-rust

./: AGENTS.md  Cargo.toml  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.tr.md  README.zh-CN.md  README.zh-TW.md  install.ps1  install.sh
.cargo/: config.toml
.devo/: config.toml
.github/workflows/: release.yml
crates/arg0/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  agent_command.rs  config.rs  doctor_command.rs  main.rs  prompt_command.rs
crates/client/: Cargo.toml
crates/client/src/: stdio.rs
crates/code-search/src/: ranking.rs
crates/config/: README.md
crates/config/src/: experimental.rs  tests.rs
crates/core/: Cargo.toml  README.md  default_base_instructions.txt  models.json
crates/core/src/: config.rs  config_resolution.rs  context_pipeline.rs  durable_record.rs  execution.rs  fork.rs  fuzzy_search.rs  instruction_discovery.rs  jsonl_store.rs  lib.rs  logging.rs  memory.rs  message_edit.rs  model.rs  model_binding.rs  model_catalog.rs  model_preset.rs  permission.rs  query.rs  replay.rs  session.rs  session_store.rs  skills.rs  tool_prompt.rs
crates/core/src/config/: README.md  app.rs  error.rs  logging.rs  mod.rs  provider.rs  tests.rs
crates/core/src/config/provider/: auth.rs  persistence.rs  resolve.rs  schema.rs
crates/core/src/conversation/: ids.rs  mod.rs  records.rs
crates/core/src/history/: compaction.rs  mod.rs  normalize.rs
crates/core/src/tools/: apply_patch.rs  bash.txt  deferred_loading.rs  glob.txt  grep.txt  mod.rs  read.rs  read.txt  registry.rs  registry_plan.rs  router.rs  shell_exec.rs
crates/core/src/tools/handlers/: agent.rs  apply_patch.rs  bash.rs  code_search.rs  exec_command.rs  file_write.rs  glob.rs  grep.rs  invalid.rs  lsp.rs  mod.rs  plan.rs  question.rs  read.rs  ripgrep.rs  shell_command.rs  skill.rs  task.rs  tool_search.rs  webfetch.rs  websearch.rs
crates/core/tests/: real_llm_e2e.rs
crates/file-search/: Cargo.toml
crates/file-search/src/: main.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  manager.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: agent.rs  conversation.rs  event.rs  lib.rs  model.rs  parse_command.rs  permissions.rs  protocol.rs  provider_vendor.rs  session.rs
crates/provider/: Cargo.toml  README.md
crates/provider/src/: error.rs  lib.rs  provider.rs  router.rs
crates/safety/: Cargo.toml
crates/safety/src/: lib.rs  sandbox.rs
crates/server/: Cargo.toml
crates/server/src/: approval.rs  approval_reviewer.rs  bootstrap.rs  client.rs  connection.rs  db.rs  event.rs  execution.rs  goal.rs  lib.rs  main.rs  persistence.rs  projection.rs  protocol.rs  provider_config.rs  runtime.rs  session.rs  subagent.rs  titles.rs  transport.rs  turn.rs
crates/server/tests/: README.md  end_to_end.rs  persistence_resume.rs  protocol_contract.rs  skills_integration.rs
crates/skills/: Cargo.toml
crates/skills/src/: installer.rs  lib.rs  package.rs  parser.rs
crates/tasks/: Cargo.toml
crates/tools/: Cargo.toml  README.md
crates/tools/src/: apply_patch.rs  bash.rs  context.rs  contracts.rs  coordinator.rs  errors.rs  file_write.rs  handler_kind.rs  lib.rs  orchestrator.rs  read.rs  registry.rs  registry_plan.rs  router.rs  tool_handler.rs  tool_spec.rs  tool_summary.rs  webfetch.rs
crates/tools/src/handlers/: file_write.rs  mod.rs  tool_search.rs
crates/tools/src/runtime/: assembly.rs  registry.rs  shell_command.rs  tests.rs  types.rs
crates/tui/: AGENTS.md  Cargo.toml  README.md
crates/tui/src/: app.rs  chatwidget.rs  chatwidget_tests.rs  events.rs  interactive.rs  lib.rs  mcp_command_tests.rs  mcp_servers.rs  model_display_tests.rs  onboarding.rs  onboarding_widget.rs  onboarding_widget_tests.rs  render.rs  slash_command.rs  startup_header.rs  tests.rs  tui.rs  worker.rs
crates/utils/: Cargo.toml
crates/utils/src/: config_paths.rs  home_dir.rs  lib.rs
crates/utils/src/absolute_path/: mod.rs
crates/utils/src/cli/: mod.rs
crates/utils/src/git_op/: branch.rs  ghost_commits.rs  info.rs  mod.rs  operations.rs  platform.rs
crates/utils/src/shell_command/: bash.rs  mod.rs  parse_command.rs  powershell.rs
crates/utils/src/shell_command/command_safety/: is_dangerous_command.rs  is_safe_command.rs  powershell_parser.rs  windows_safe_commands.rs
docs/: design-overview.md  spec-app-config.md  spec-context-management.md  spec-conversation.md  spec-interactive-tui-v2.md  spec-language-model.md  spec-mcp.md  spec-overview-architecture.md  spec-safety.md  spec-server-api.md  spec-skills.md  spec-tools.md
docs/i18n/: README.es.md  README.fr.md  README.ja.md  README.ko.md  README.zh-CN.md
specs/: l2_l3_traceability_gaps.py
specs/L1/: L1-REQ-CLIENT-003-tool-activity-presentation.md
specs/L2/agent/: L2-DES-AGENT-001-execution-engine.md  L2-DES-AGENT-003-subagent-architecture.md
specs/L2/app/: L2-DES-APP-002-configuration-precedence.md  L2-DES-APP-003-client-server-protocol.md  L2-DES-APP-005-config-toml-schema.md  L2-DES-APP-006-fuzzy-search-architecture.md  L2-DES-APP-007-cli-onboarding-entry.md
specs/L2/client/: L2-DES-CLIENT-002-prefixed-input-actions.md  L2-DES-CLIENT-003-cli-exit-display.md
specs/L2/context/: L2-DES-CONTEXT-001-context-assembly.md  L2-DES-CONTEXT-002-context-compaction.md  L2-DES-CONTEXT-003-context-normalization.md
specs/L2/model/: L2-DES-MODEL-001-model-provider-binding.md
specs/L2/safety/: L2-DES-SAFETY-001-permission-system.md  L2-DES-SAFETY-002-approval-mechanism.md
specs/L2/tool/: L2-DES-TOOL-001-built-in-tool-system.md  L2-DES-TOOL-002-parallel-tool-orchestration.md  L2-DES-TOOL-003-deferred-tool-loading.md
specs/L2/traceability/: L2-DES-TRACE-001-traceability-system.md
specs/L2/tui/: L2-DES-TUI-001-onboarding-ui-flow.md  L2-DES-TUI-002-modern-tui-shell-layout.md  L2-DES-TUI-003-composer-and-input-modes.md  L2-DES-TUI-004-streaming-transcript-and-state.md  L2-DES-TUI-008-style.md  (+1 more)
specs/tests/: test_l2_l3_traceability_gaps.py
specs/traceability/: l1_to_l2.md  l3_to_impl.md  verification.md
(+127 files in other folders)
