[package]
description = "Message model, session state, and agent main loop"
edition.workspace = true
license.workspace = true
name = "devo-core"
version.workspace = true

[dependencies]
devo-protocol = { workspace = true }
devo-provider = { workspace = true }
devo-safety = { workspace = true }
devo-tools = { workspace = true }
devo-utils = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
diffy = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
iana-time-zone = { workspace = true }
portable-pty = "0.9"
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
filedescriptor = "0.8.3"
lazy_static = { workspace = true }
shared_library = "0.1.9"
winapi = { version = "0.3.9", features = [
    "handleapi",
    "minwinbase",
    "ntdef",
    "ntstatus",
    "processthreadsapi",
    "synchapi",
    "winbase",
    "wincon",
    "winerror",
    "winnt",
] }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
devo-provider = { workspace = true }
devo-safety = { workspace = true }
futures = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
uuid = { workspace = true }
