[package]
edition.workspace = true
license.workspace = true
name = "clawcr-file-search"
version.workspace = true

[[bin]]
name = "clawcr-file-search"
path = "src/main.rs"

[lib]
name = "clawcr_file_search"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossbeam-channel = { workspace = true }
ignore = { workspace = true }
nucleo = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
