[package]
description = "Shared client/server protocol types for Devo"
edition.workspace = true
license.workspace = true
name = "devo-protocol"
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
