[package]
description = "Secret redaction, approval policy, and sandbox policy contracts"
edition.workspace = true
license.workspace = true
name = "devo-safety"
version.workspace = true

[dependencies]
async-trait = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
