[package]
description = "Tool contracts shared by core, server, and clients"
edition.workspace = true
license.workspace = true
name = "devo-tools"
version.workspace = true

[dependencies]
devo-protocol = { workspace = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
