[package]
description = "Shared filesystem and path helpers for runtime bootstrap"
edition.workspace = true
license.workspace = true
name = "clawcr-utils"
version.workspace = true

[dependencies]
ansi-to-tui = { workspace = true }
base64 = { workspace = true }
clawcr-protocol = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
once_cell = { workspace = true }
ratatui = { workspace = true, features = [
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "process", "rt", "time"] }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
